# ModE_Group7

./: .gitignore  ModE_requirements.txt  README.md  dispatch_result.csv  dispatch_result_MILP.csv  dispatch_result_MILP_Flo.csv  dispatch_result_lp.csv  pyproject.toml  test.py
Erdem/: energy_demands.csv  playground_analysis.ipynb  playground_optimization.ipynb  sampling_test.ipynb  training_samples_lhs.csv  training_samples_sobol.csv
Erdem/scripts/: milp_optimization.py  optimize_milp.py  run_sampling.py
Florian/: LP_V2.py  LP_price_factors.py  MILP.py  OPEX_discrepancy_MILP_vs_LP.csv  OPEX_results_scenarios_LP.csv  OPEX_results_scenarios_MILP.csv  calculate_result_discrepancy.py  dispatch_result_MILP.csv  heatmap.py  new_MILP_zero_order_hold.py  surrogate_model_MILP_training.joblib  surrogate_model_opex_lp_approx.joblib  surrogate_model_opex_lp_lower.joblib  surrogate_model_opex_lp_upper.joblib  surrogate_model_opex_milp.joblib
Florian/Visualizations/: code_visulaization_MILP.py  compare_relaxed_vs_middled_LP.py
Florian/results/: OPEX_discrepancy_MILP_vs_LP.csv  OPEX_dispatch_scenarios_LP_marius_price_factors.csv  OPEX_dispatch_scenarios_LP_price_factors.csv  OPEX_dispatch_scenarios_LP_price_factors_marius_middled.csv  (+5 more)
Marius/: Playground.py  formulation_LP.py  formulation_LP_approximated.py  formulation_LP_binary.py  formulation_LP_lower.py  formulation_LP_upper.py  formulation_MILP.py  plot_dispatch_from_csv.py
Project/: energy_demands.csv  formulation.py  formulation_LP.py  formulation_MILP.py  linearization.ipynb  playground.ipynb
(+220 files in other folders)
